[package]
name = "botanist_codegen"
version = "0.1.0"
authors = ["Cameron Wheeler <cwheel@users.noreply.github.com>"]
edition = "2018"
license = "MIT"
documentation = "https://cwheel.github.io/botanist"
repository = "https://github.com/cwheel/botanist"
keywords = ["graphql", "orm", "diesel", "codegen"]
description = "Code generation library for Botanist; Generate GraphQL schemas from Diesel models"
readme = "../Readme.md"
categories = ["web-programming", "database"]

[lib]
proc-macro = true

[dependencies]
syn = "1.0.23"
quote = "1.0.6"
proc-macro2 = "1.0.15"
juniper = "0.14.2"